--- a/Proxmox/tasks/instances/pihole_lxc.yml
+++ b/Proxmox/tasks/instances/pihole_lxc.yml
@@ -23,7 +23,7 @@
 
       - name: '{{ instance.hostname | upper }}: Create Config Directories on Host'
         file:
-            path: '{{ item }}'
+            path: '{{ dir_item }}'
             state: directory
             mode: '0777'
             owner: '{{ instance.subuid }}'
@@ -32,6 +32,8 @@
         loop:
             - '{{ paths.config_pihole }}'
             - '{{ paths.config_dnsmasq }}'
+        loop_control:
+            loop_var: dir_item
 
       - name: '{{ instance.hostname | upper }}: Provision Instance'
         when: instance_check.status | default(0) != 200
