--- a/Proxmox/main.yml
+++ b/Proxmox/main.yml
@@ -14,6 +14,10 @@
         register: galaxy_install
         changed_when: "'Installing' in galaxy_install.stdout"
 
+      - name: Persist Prompt Variable
+        set_fact:
+            run_vms_input: '{{ run_vms_input }}'
+
       - name: Environment Setup
         include_tasks: tasks/env.yml
 
@@ -29,14 +33,12 @@
 
       - name: Set VM deployment flag
         set_fact:
-            run_vms: "{{ (hostvars['local']['run_vms_input'] | lower) in ['yes', 'y'] }}"
+            run_vms: "{{ (hostvars['local']['run_vms_input'] | default('n') | lower) in ['yes', 'y'] }}"
 
   tasks:
       - name: Execute System Tasks
         include_tasks: 'tasks/system/{{ item }}.yml'
         loop:
-            # - restart
-            # - health
             - update
             - automount
             - security
@@ -49,6 +51,5 @@
             - docker_lxc
             - storage_lxc
             - jellyfin_lxc
-            - qbittorrent_lxc
             - pihole_lxc
         when: not (item.endswith('_vm') and not run_vms)
