--- a/Proxmox/tasks/instances/docker_lxc/backrest.yml
+++ b/Proxmox/tasks/instances/docker_lxc/backrest.yml
@@ -9,7 +9,7 @@
 
       - name: '{{ app_name | upper }}: Configure Directories'
         file:
-            path: '{{ item }}'
+            path: '{{ dir_item }}'
             state: directory
             mode: '0777'
             owner: '{{ mapped_uid }}'
@@ -18,6 +18,8 @@
         loop:
             - '{{ config.root }}'
             - '{{ config.root }}/data'
+        loop_control:
+            loop_var: dir_item
 
       - name: '{{ app_name | upper }}: Create config.json'
         copy:
@@ -86,7 +88,6 @@
                       - {{ config.local}}:/config
                       - {{ instance.configs }}:{{ instance.configs }}:ro
                       - /media/ssd:/media/ssd
-                      - /media/wdhdd:/media/wdhdd
                     environment:
                       - BACKREST_DATA=/data
                       - BACKREST_CONFIG=/config/config.json
