--- a/Proxmox/tasks/instances/jellyfin_lxc.yml
+++ b/Proxmox/tasks/instances/jellyfin_lxc.yml
@@ -22,13 +22,15 @@
 
       - name: '{{ instance.hostname | upper }}: Create Config Directory on Host'
         file:
-            path: '{{ item }}'
+            path: '{{ dir_item }}'
             state: directory
             mode: '0777'
             recurse: true
         loop:
             - '{{ paths.config }}'
             - '{{ paths.data }}'
+        loop_control:
+            loop_var: dir_item
 
       - name: '{{ instance.hostname | upper }}: Provision Instance'
         when: instance_check.status | default(0) != 200
